[package]
name = "burocratin"
version = "0.1.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "File",
  "FileReader",
  "FileReaderSync",
  "Url",
]

[dependencies]
anyhow = "1.0"
utf16-ext = "0.1"
byteorder = "1.2"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
encoding_rs = "0.8"
html5ever = "0.25"
instant = { version = "0.1", features =  [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3"
log = "0.4"
nom = "6.0"
once_cell = "1.5"
pdf = "0.7"
rust_decimal = "1.7"
scraper = "0.12"
selectors = "0.22"
serde = { version = "1.0", features = ["derive", "rc"] }
xml-rs = "0.8"
yew = "0.18"
yew_assets= {version = "0.1", features = ["full"]}
yew_styles = { version="0.11", features=["full"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
zip = { version = "0.5", default-features = false, features = ["deflate"]}

[dev-dependencies]
ctor = "0.1"
env_logger = "0.9"
