[package]
name = "burocratin"
version = "0.2.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlAnchorElement",
  "HtmlInputElement",
  "FileList",
]

[dependencies]
anyhow = "1.0"
utf16-ext = "0.1"
byteorder = "1.2"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
csv = "1.1"
dominator = "0.5"
encoding_rs = "0.8"
futures = "0.3"
futures-signals = "0.3"
gloo-file = { version = "0.3", features = [ "futures" ] }
gloo-utils = "0.2"
html5ever = "0.25"
infer = "0.16.0"
instant = { version = "0.1", features =  [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3"
log = "0.4"
nom = "6.0"
once_cell = "1.5"
pdf-extract = "0.7"
rust_decimal = "1.7"
scraper = "0.12"
selectors = "0.22"
serde = { version = "1.0", features = ["derive", "rc"] }
xml-rs = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
zip = { version = "0.5", default-features = false, features = ["deflate"]}
isin = "0.1.18"

[dev-dependencies]
ctor = "0.1"
env_logger = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
thirtyfour = "0.27"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = "z"  # 3 => fast, s/z => small
# link time optimization using using whole-program analysis
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]  # O4 => fast, Oz/Os => small
